[package]
name = "osuirc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
dotenvy = "*"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
futures = "0.3"
tracing = "0.1"
itertools = "0.12.0"
irc = "0.15"
regex = { version = "1.10.3", features = ["use_std"] }
